--- a/config.toml
+++ b/config.toml
@@ -24,10 +24,12 @@ rv-brand = "ReVanced Extended"
 #patcher-args = "-e 'Change package name' -OpackageNameReddit=com.reddit"
 
 [Twitter]
-enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
-patches-source = "crimera/revanced-integrations"
+patches-source = "ReVanced/revanced-cli"
+integrations-source = "crimera/revanced-integrations"
 cli-source = "crimera/piko"
+rv-brand = "ReVanced ReVanced"
+patches-version = "4.6.0"
 build-mode = "apk"
 dpi = "120-640dpi"
 version = "auto"
