--- a/config.toml
+++ b/config.toml
@@ -25,6 +25,7 @@ rv-brand = "ReVanced Extended"
 
 [Twitter]
 apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
+build-mode = "apk"
 patches-source = "crimera/piko"
 integrations-source = "crimera/revanced-integrations"
 cli-source = "ReVanced/revanced-cli"
