--- a/config.toml
+++ b/config.toml
@@ -28,8 +28,8 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
 build-mode = "apk"
 patches-source = "crimera/piko"
 integrations-source = "crimera/revanced-integrations"
-cli-source = "ReVanced/revanced-cli"
-cli-version = "v4.6.0"
+cli-source = "inotia00/revanced-cli"
+cli-version = "v4.6.2"
 dpi = "120-640dpi"
 version = "auto"
 
