--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,8 @@
 enable-magisk-update = true
 parallel-jobs = 1
-# compression-level = 9
-remove-rv-integrations-checks = true
+compression-level = 9
 
 [YouTube]
-enabled = false
 build-mode = "apk"
 excluded-patches = "'Downloads' 'Swipe controls' 'Always repeat'"
 included-patches = "'Custom branding'"
@@ -14,7 +12,6 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
 uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 
 [Reddit]
-enabled = false
 uptodown-dlurl = "https://reddit-official-app.en.uptodown.com/android"
 apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit"
 apkmirror-dpi = "120-640dpi"
@@ -25,10 +22,10 @@ rv-brand = "ReVanced Extended"
 #patcher-args = "-e 'Change package name' -OpackageNameReddit=com.reddit"
 
 [Twitter]
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
 patches-source = "crimera/piko"
 integrations-source = "crimera/revanced-integrations"
-cli-version = "v4.6.0"
 
 [Twitch]
 enabled = false
@@ -39,7 +36,6 @@ version = "auto"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
 
 [Tiktok]
-enabled = false
 build-mode = "apk"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 included-patches = "'SIM spoof'"
@@ -47,10 +43,9 @@ version = "auto"
 arch = "arm64-v8a"
 
 [Spotify]
-enabled = false
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
-included-patches = "'Change version code' 'Custom theme'"
+included-patches = "'Custom theme'"
 arch = "arm64-v8a"
