--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,8 @@ version = "auto"
 [Tiktok]
 build-mode = "apk"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
-included-patches = "'SIM spoof'"
+uptodown-dlurl = "https://tiktok.en.uptodown.com/android"
+included-patches = "'SIM spoof' 'Change version code'"
 version = "auto"
 arch = "arm64-v8a"
 
