--- a/config.toml
+++ b/config.toml
@@ -42,10 +42,9 @@ version = "auto"
 arch = "arm64-v8a"
 
 [Spotify]
-apkmirror-dlurl = "https://www.apkmirror.com/apk/spotify-ab/spotify-music-and-podcasts-amazon-fire-tablet-version"
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 included-patches = "'Custom theme' 'Change version code'"
-version = "auto"
+version = "9.0.38.504"
