--- a/config.toml
+++ b/config.toml
@@ -46,5 +46,6 @@ uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
-included-patches = "'Custom theme' 'Change version code'"
-version = "9.0.38.504"
+included-patches = "'Change version code' 'Custom theme'"
+arch = "arm64-v8a"
+#version = "9.0.38.504"
