--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,7 @@ version = "auto"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
 
 [Tiktok]
+enabled = false
 build-mode = "apk"
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 uptodown-dlurl = "https://tiktok.en.uptodown.com/android"
@@ -42,6 +43,7 @@ version = "auto"
 arch = "arm64-v8a"
 
 [Spotify]
+enabled = false
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 patches-source = "anddea/revanced-patches"
